modal height overflow fix

--- a/src/app/pages/questions/add-question/add-question.component.scss
+++ b/src/app/pages/questions/add-question/add-question.component.scss
@@ -47,7 +47,7 @@
 
 .question-image {
 	width: auto;
-	height: 400px;
+	height: 100%;
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
